# proof-council

./: .gitignore  AGENTS.md  CLI_LEAD_RESEARCHER.md  Dockerfile  HANDOFF.md  README.md  pyproject.toml
app/: dev.py  dev_data.py
deploy/: Dockerfile
docs/: pacer-rework.md
problems/: Cross_ratio_completeness.txt  Monotonicity_of_the_cross-ratio_degree.txt
scripts/: build_attention_harness.py  health.sh  judge_attn.py  launch_run.py  make_attn_variants.py  make_roster_variants.py  postscreen_run.py  prescreen_problem.py  run_attn_sweep.sh  run_dashboard.sh  run_roster_sweep.sh  run_status.sh  run_workflow.py  run_workflow_batch.py  ui_review.py  ui_review.sh  validate_preset.sh  verify_resume.sh  watch_run.sh
tests/: test_ac_author_anthropic_files.py  test_ac_compute_worker.py  test_ac_council_defaults.py  test_api_client_anthropic_streaming.py  test_api_client_responses_tools.py  test_cli_usage.py  test_configurable_cli.py  test_dag_schema_report.py  test_dag_workflow_runtime_helpers.py  test_dev_data_mutations.py  test_editor_template_contracts.py  test_executor_roundtrip.py  test_fable_config.py  test_human_agent.py  test_human_proof_routes.py  test_pacer_experimental.py  test_r1_billing.py  test_r1_cli_cancel.py  test_r1_executor.py  test_r1_human_relist.py  test_r1_map_chain.py  test_r1_pacer_state.py  test_r1_pacing.py  test_r1_parked.py  test_r1_prompt.py  test_r1_resume.py  test_r1_schema.py  test_r2_batch_status.py  test_r2_cli_cancel_metering.py  test_r2_human_coerce.py  test_r2_pacer_completions.py  test_r3_pacer_boundary.py  test_r4_pacer_review.py  (+9 more)
(+66 files in other folders)
